test/classes/jplevyak/union_type_hierarchy-3-error.good
union_type_hierarchy-3-error.chpl:1: In function '__init_union_type_hierarchy-3-error':
union_type_hierarchy-3-error.chpl:16: error: Unresolved call 'f(:D)'
error: Candidates are:
union_type_hierarchy-3-error.chpl:10: error:   f(a: C)
